# game_engine_rs_3

./: .gitignore  .rules  Cargo.toml  Makefile  RENDER_THREAD_TODO.md  Readme.md  bench_scatter.py  claude.md  todo.txt
crates/editor/: Cargo.toml
crates/editor/src/: main.rs
crates/engine/: Cargo.toml
crates/engine-core/: Cargo.toml
crates/engine-core/examples/: pool_bench.rs
crates/engine-core/src/: asset.rs  lib.rs  material.rs  scene_asset.rs  texture.rs
crates/engine-core/src/component/: mod.rs
crates/engine-core/src/mesh/: mod.rs  primitives.rs
crates/engine-core/src/transform/: compute.rs  mod.rs
crates/engine-core/src/util/: avail.rs  container.rs  mod.rs  my_thread_pool.rs  numa.rs  numa_mem.rs  numa_pool.rs  numa_soa.rs  parallel.rs  seg_storage.rs  storage.rs  thread_pool.rs
crates/engine-editor-api/: Cargo.toml
crates/engine-editor-api/src/: lib.rs
crates/engine-render/: Cargo.toml
crates/engine-render/shaders/: cull_pass2_args.comp  gpu_renderers_scatter.comp  hiz_reduce_depth.comp  hiz_reduce_mip.comp  hiz_reduce_mip2.comp  mvp_build.comp  mvp_build_pass2.comp  parent_scatter.comp  scatter.comp  scatter_build_args.comp  scatter_prepass.comp  scene.frag  scene.vert  signal.comp
crates/engine-render/src/: camera.rs  components.rs  gpu_mesh.rs  gpu_parents.rs  gpu_renderers.rs  gpu_telemetry.rs  input.rs  lib.rs  scene.rs  shaders.rs  swapchain.rs  transform_gpu.rs
crates/engine-render/src/assets/: catalog.rs  gpu_store.rs  material_store.rs  mod.rs  registry.rs  texture_store.rs
crates/engine/src/: lib.rs
crates/packager/: Cargo.toml
crates/packager/src/: main.rs
crates/test-game/: Cargo.toml
crates/test-game/assets/cube/: Crate1.mtl
crates/test-game/src/: main.rs
docs/: ADR-0001-custom-swapchain.md  ADR-0002-per-frame-cb-recording.md  ADR-0003-shared-staging-with-compute-sync.md  ADR-0004-instanced-indirect-draw.md  ADR-0005-dual-pass-occlusion-culling.md  ADR-INDEX.md  thread-pool-redesign-plan.md  unified-scheduler-design.md
docs/notes/: general.md  parent-shader.md  scene-loading-after-pool-init.md
