[workspace]
members = [
    "crates/engine-core",
    "crates/engine-render",
    "crates/engine-editor-api",
    "crates/engine",
    "crates/editor",
    "crates/packager",
    "crates/test-game",
]
resolver = "2"

# ─────────────────────────────────────────────────────────────────────────────
# Build profiles
# ─────────────────────────────────────────────────────────────────────────────

# Release: cross-crate inlining matters because the renderer's hot-path
# components (the static thread-pool closures in `ComponentStorage::par_iter`,
# the `walk_bits` / dirty-harvest loops in `engine-render`, and glam's
# `Mat4`/`Quat` math) all live in different crates from the binaries that
# call them. `thin` LTO
# costs ~30% extra link time for the win; `codegen-units = 1` on top removes
# the last cross-CGU inlining barrier inside `engine-render` itself, which
# is a single very large crate.
[profile.release]
lto           = "thin"
codegen-units = 1

# Dev: keep the default debug build snappy, but turn on opt-level=1 for the
# math/util dependencies that dominate frame time even in debug. Without
# this, glam's `Mat4 * Mat4` and the per-task dispatch in the static thread
# pool are unusably slow in `cargo run` builds. opt-level=1 keeps debuginfo intact.
[profile.dev.package.glam]
opt-level = 3
[profile.dev.package.parking_lot]
opt-level = 3
[profile.dev.package.parking_lot_core]
opt-level = 3
[profile.dev.package.engine-core]
opt-level = 3

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# Internal crates
engine-core       = { path = "crates/engine-core" }
engine-render     = { path = "crates/engine-render" }
engine-editor-api = { path = "crates/engine-editor-api" }
engine            = { path = "crates/engine" }

# External dependencies
#
# vulkano 0.35.2 is the latest stable release as of 2025-08.
# vulkano-util 0.35.0 declares `vulkano ^0.35` and `winit ^0.30`,
# so all three resolve to mutually compatible versions.
vulkano         = "0.35.2"
vulkano-util    = "0.35.0"
vulkano-shaders = "0.35"
winit           = "0.30"

# clap 4.5 uses Rust 1.74, consistent with the 2021 edition toolchain.
clap = { version = "4.5", features = ["derive"] }

# Math, concurrency, and data structures used across crates.
glam        = "0.30"
parking_lot = "0.12"
segvec      = "0.2"
dary_heap   = "0.3"
smallvec    = "1"
core_affinity = "0.8"
