[package]
name    = "engine-render"
version.workspace = true
edition.workspace = true

[dependencies]
engine-core.workspace      = true
rayon.workspace       	   = true
vulkano.workspace          = true
vulkano-util.workspace     = true
vulkano-shaders.workspace  = true
winit.workspace            = true
glam.workspace             = true
smallvec.workspace         = true
core_affinity.workspace    = true
